at last fix menu item center alignment

--- a/HotfixStudio.Presentation/Components/Elements/MainMenu.razor.css
+++ b/HotfixStudio.Presentation/Components/Elements/MainMenu.razor.css
@@ -33,7 +33,9 @@
     text-overflow: ellipsis;
     width: 100%;
     min-width: 0;
-    line-height: 16px;
+    height: 16px;
+    align-self: center;
+    margin-left: 4px;
 }
 
 .label:hover {
